2005-09-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* all.tcl: Added Tcl 8.5 specific code to
	'::tcltest::tooManyArgs'.

2005-09-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: Added a 'timing' subcommand to run *.timing scripts.

2005-08-29  Kevin Kenny  <kennykb@acm.org>

	* all.tcl (tcltest::wrongNumArgs): Revised to handle 8.5 error message.
	
2005-08-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/aes:            NEW MODULE: aes
	* installed_modules.tcl: 

2005-08-17  Bob Techentin <techentin@users.sourceforge.net>
	
	* installed_modules.tcl:  NEW MODULE: units
	* modules/units:

2005-07-26  Stephane Arnold <sarnold75@users.sourceforge.net>
	
	* installed_modules.tcl : registered math example

2005-07-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* config/config.guess: Updated to newer versions.
	* config/config.sub:

	* all.tcl: Small correction in wrongNumArgs for when the argument
	  list is not empty (Added a space).

	* sak.tcl: Rewrite of critcl invokation on Windows, allow usage of
	  critcl starpack, and for starkits a plain tclsh as interpreter.

2005-07-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* modules/pluginmgr:  New module for the management of plugins.

2005-04-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installer.tcl: Fixed installer, updated to the new file and API
	  for package meta information. Fixed bug in app installation,
	  forgot to skip actual copy operations when in simulate-mode.

2005-04-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl: Should be bundle independent now, with (undocumented)
	  API to the bundle specific information (package_* files).

	* sak.tcl: Moved existing name/version variables over to package
	  neutral names. Moved meta data file to package neutral
	  name. Changed the API between sak and meta data file, it is now
	  command oriented. Replaced hardwired package labeling with