@@ -1,3 +1,8 @@
+2005-09-26  Andreas Kupries <andreask@activestate.com>
+
+	* installed_modules.tcl: Added the 'tcldocstrip' application to
+	  the installer.
+
 2005-09-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* all.tcl: Added Tcl 8.5 specific code to
